--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,25 @@
 * {
   padding: 0%;
   margin: 0%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.title{
+  text-align: center;
+  font-size: 40px;
+  color: rgb(38, 80, 156);
+
 }
 
 .errorsLog {
   flex: 1;
-  color: white;
   text-align: center;
   padding: 10px;
   display: block;
   text-align: left;
   list-style: none;
   line-height: 24px;
+  font-size:20px;
 }
 
 .heading {
@@ -21,8 +29,29 @@
 }
 
 .content {
-  background-color: rgb(34, 34, 34);
+  background-color: rgb(219, 219, 219);
   height: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.left{
+  width: 50%;
+  padding: 20px;
+  background-color: rgb(201, 201, 201);
+  height: 550px;
+  border: 2px solid rgb(172, 172, 172);
+  border-radius: 10px;
+}
+
+.right{
+  width: 40%;
+  padding: 20px;
+  background-color: rgb(240, 240, 240);
+  height: 550px;
+  border: 2px solid rgb(172, 172, 172);
+  border-radius: 10px;
 }
 
 .clearButton {
@@ -34,7 +63,7 @@
 .buttonSubmit {
   background-color: rgb(38, 80, 156);
   color: white;
-  border: 1px solid white;
+  border: 1px solid rgb(78, 78, 78);
   font-size: 24px;
   border-radius: 5px;
   padding: 10px 20px;
