--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-.title{
+.title {
   text-align: center;
   font-size: 40px;
   color: rgb(38, 80, 156);
@@ -19,7 +19,7 @@
   text-align: left;
   list-style: none;
   line-height: 24px;
-  font-size:20px;
+  font-size: 20px;
 }
 
 .heading {
@@ -36,7 +36,7 @@
   align-items: center;
 }
 
-.left{
+.left {
   width: 50%;
   padding: 20px;
   background-color: rgb(201, 201, 201);
@@ -45,7 +45,7 @@
   border-radius: 10px;
 }
 
-.right{
+.right {
   width: 40%;
   padding: 20px;
   background-color: rgb(240, 240, 240);
@@ -74,7 +74,7 @@
 }
 
 
-.output{
+.output {
   resize: none;
   font-size: 1.2em;
   line-height: 1.1;
@@ -85,4 +85,35 @@
   resize: none;
   width: 2000px;
   margin-top: 20px;
+}
+
+.semantic-title {
+  font-size: 16px;
+  color: rgb(30, 30, 30);
+  font-weight: 800;
+  padding: 4px 0
+}
+
+.semantic-output {
+  margin-left: 20px;
+  padding: 6px;
+  font-size: 1.2em;
+  line-height: 1.1;
+  text-align: justify;
+  background-color: rgba(65, 105, 225, 0);
+  border: none;
+  resize: none;
+  height: 200px;
+  margin-top: 20px;
+  background-color: rgb(232, 232, 232);
+  -webkit-box-shadow: inset 3px 3px 0px -1px rgba(145, 143, 145, 0.85);
+  -moz-box-shadow: inset 3px 3px 0px -1px rgba(145, 143, 145, 0.85);
+  box-shadow: inset 3px 3px 0px -1px rgba(145, 143, 145, 0.85);
+  overflow-y: scroll;
+}
+
+.semantic-output p {
+  font-size: 12px;
+  color: rgb(241, 12, 12);
+  padding-top: 4px;
 }
